<resources>

    <!-- Main Activity Strings -->
    <string name="app_name">WindSpeedConverter</string>

    <string name="unit_metric">Km/hr:</string>
    <string name="unit_knots">Knots:</string>
    <string name="unit_beaufort">Beaufort:</string>

    <string name="select_input">Select Input \n Type</string>
    <string name="calc_units">Calculate \n Units</string>
    <string name="view_graph">View \n Graph</string>
    <string name="view_add">Add different \n units</string>

    <string name="select_unit">Select Unit</string>
    <string name="select_unit_desc">Please select to unit to input</string>

    <!-- AddUnitsActivity Strings -->
    <string name="title_activity_add_units">AddUnitsActivity</string>

    <string name="add_multiple_units">Add different units together</string>

    <string name="add_units">Add units</string>

    <string name="addition">+</string>
    <string name="equals">=</string>

    <!-- Graph Activity Strings -->
    <string name="title_activity_graphic_view">GraphicView</string>
    <string name="notify">Notify</string>
    <string name="call_notif">Call Notification</string>
    <string name="call">Call: </string>


    <!-- -->
    <string name="action_settings">Settings</string>
</resources>
