<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
android:paddingRight="@dimen/activity_horizontal_margin"
android:paddingTop="@dimen/activity_vertical_margin"
android:paddingBottom="@dimen/activity_vertical_margin"
tools:context="com.wind_speed_converter.MainActivity"
android:id="@+id/main_lyt_rel">

<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textAppearance="?android:attr/textAppearanceLarge"
    android:id="@+id/main_tv_title"
    android:text="@string/app_name"
    android:layout_alignParentTop="true"
    android:layout_alignParentStart="true" />

<EditText
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:inputType="numberDecimal"
    android:ems="10"
    android:id="@+id/main_tf_units"
    android:layout_below="@+id/main_tv_title"
    android:layout_alignParentEnd="true" />

<TableLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:layout_alignParentStart="true"
    android:stretchColumns="0,1"
    android:id="@+id/main_lyt_table"
    android:focusableInTouchMode="true">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/main_tv_metricunit"
            android:layout_centerVertical="true"
            android:layout_toStartOf="@+id/main_tv_title"
            android:textIsSelectable="true"
            android:layout_column="0"
            android:text="@string/unit_metric" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/main_tv_metricval"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/main_tv_title"
            android:layout_column="1"
            android:height="20dp" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/main_tv_knotunit"
            android:layout_column="0"
            android:text="@string/unit_knots" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/main_tv_knotval"
            android:layout_column="1" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/main_tv_beaufortunit"
            android:layout_column="0"
            android:text="@string/unit_beaufort" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/main_tv_beaufortval"
            android:layout_column="1" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/main_btn_inputtype"
            android:layout_column="0"
            android:text="@string/select_input" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/main_btn_calc"
            android:layout_column="1"
            android:text="@string/calc_units" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/main_btn_graphview"
            android:layout_column="0"
            android:text="@string/view_graph" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/main_btn_addunits"
            android:layout_column="1"
            android:text="@string/view_add" />
    </TableRow>
</TableLayout>

    <TextView
        android:id="@+id/main_tv_curunit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/main_tf_units"
        android:layout_alignParentStart="true"
        android:layout_marginStart="20dp"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</RelativeLayout>
